--- a/contents/stroke_about_portal.html
+++ b/contents/stroke_about_portal.html
@@ -5,7 +5,7 @@
 
 
                         Summary statistics from published papers are available for download.
-                        <span style="display:block; width: 100%; text-align: right; margin-top: 0px; padding:10px 40px 10px 0;background-image:url(https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/button_arrow.svg?sanitize=true); background-repeat: no-repeat; background-position: center right;"><a href="http://cerebrovascularportal.org/informational/downloads" target='blank'>Go to the Downloads page</a></span>
+                        <span style="display:block; width: 100%; text-align: right; margin-top: 0px; padding:10px 40px 10px 0;background-image:url(/dig-diabetes-portal/static/images/button_arrow.svg); background-repeat: no-repeat; background-position: center right;"><a href="http://cerebrovascularportal.org/informational/downloads" target='blank'>Go to the Downloads page</a></span>
 
 
                         <hr/> <a href="http://institute.heart.org" target="_blank"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/AHA_precision.jpg" style="width: 330px; margin-right: 10px;" align="right" ></a>
