--- a/contents/ibd_about_portal.html
+++ b/contents/ibd_about_portal.html
@@ -1,7 +1,7 @@
 <div class="col-md-12" style="padding-top:40px;">
                         <img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/data_icon3.png" style="width: 200px; margin-right: -50px;" align="right" >
                         <h2 style="font-family:'Oswald'; font-size: 40px;font-weight:700; margin-top:5px;">About the Portal</h2>
-                    <p>The T2D Knowledge Portal enables browsing, searching, and analysis of human genetic information linked to type 2 diabetes and related traits, while protecting the integrity and confidentiality of the underlying data.
+                    <p>The Variant to Function demo portal is intended as a method of soliciting feedback on one form of a V2F UI.
                     <h1 style="display:block; font-size:65px; letter-spacing:-0.03em; width:550px; margin-top: 0px;"><span style="color:#F58A1F;font-family: 'Oswald'; ">35 Datasets,</span> <span style="color:#80C242;font-family: 'Oswald'; ">68 traits</span></h1>
 
                         <span style="display:block; width: 100%;text-align:left;"><a style=" font-size: 20px; padding:10px 40px 10px 0; margin-right: -30px;background-image:url(/dig-diabetes-portal/static/images/button_arrow.svg); background-repeat: no-repeat; background-position: center right; text-decoration:none; color:#333333; " href="/dig-diabetes-portal/informational/data">Browse data here</a></span>
