--- a/contents/stroke_citation.html
+++ b/contents/stroke_citation.html
@@ -1,5 +1,5 @@
 <div class="row" style="font-size:14px; border-top: solid 2px #5FC36A; border-bottom: solid 1px #fff; background-color:#eee; color:#333; font-weight: 100; padding:10px 15px 1px 15px; margin-top:40px;">
-<div class="col-md-2" style="color:#4eadcd; padding: 0; ">
+<div class="col-md-2" style="color:#5FC36A; padding: 0; ">
   <span style="font-family:'Oswald'; font-size: 25px;">Citation</span>
 </div>
 <div class="col-md-10" style="">
