--- a/contents/t2d_about_page.html
+++ b/contents/t2d_about_page.html
@@ -43,17 +43,17 @@
                 <p style="text-align:justify">The Knowledge Portal is also funded by the <a href="http://www.broadinstitute.org/news/1405" target= "_blank">Slim Initiative for Genomic Medicine in the Americas (SIGMA)</a>, which supports research on the genetics of T2D in Hispanic populations as well as a Spanish-language version of the Portal.</p>
 
                 <table class="table text-center" style="vertical-align:middle;"><tr><td>
-                    <a href="http://www.niddk.nih.gov/Pages/default.aspx"><img src="/dig-diabetes-portal/static/images/organizations/NIH_NIDDK.png" style="width: 120px; padding-top:18px;"></a></td><td>
-                    <a href="http://www.fnih.org"><img src="/dig-diabetes-portal/static/images/organizations/FNIH.jpg" style="width: 125px;"></a></td><td>
-                    <a href="http://www.janssen.com"><img src="/dig-diabetes-portal/static/images/organizations/janssen.jpg" style="width: 125px;"></a></td><td>
-                    <a href="https://www.lilly.com/home.aspx"><img src="/dig-diabetes-portal/static/images/organizations/lilly.jpg" style="width: 130px;"></a></td><td>
-                    <a href="http://www.merck.com/index.html"><img src="/dig-diabetes-portal/static/images/organizations/merck.jpg" style="width: 130px;"></a></td></tr>
+                    <a href="http://www.niddk.nih.gov/Pages/default.aspx"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/NIH_NIDDK.png" style="width: 120px; padding-top:18px;"></a></td><td>
+                    <a href="http://www.fnih.org"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/FNIH.jpg" style="width: 125px;"></a></td><td>
+                    <a href="http://www.janssen.com"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/janssen.jpg" style="width: 125px;"></a></td><td>
+                    <a href="https://www.lilly.com/home.aspx"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/lilly.jpg" style="width: 130px;"></a></td><td>
+                    <a href="http://www.merck.com/index.html"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/merck.jpg" style="width: 130px;"></a></td></tr>
                     <tr><td>
-                        <a href="http://www.pfizer.com"><img src="/dig-diabetes-portal/static/images/organizations/pfizer.jpg" style="width: 130px;"></a></td><td>
-                        <a href="http://en.sanofi.com"><img src="/dig-diabetes-portal/static/images/organizations/sanofi.jpg" style="width: 140px;"></a></td><td>
-                        <a href="http://jdrf.org"><img src="/dig-diabetes-portal/static/images/organizations/jdrf.jpg" style="width: 125px;"></a></td><td>
-                        <a href="http://www.diabetes.org"><img src="/dig-diabetes-portal/static/images/organizations/ADA.jpg" style="width: 135px;"></a></td>
-                        <td><a href="http://www.fundacioncarlosslim.org/en/"><img src="/dig-diabetes-portal/static/images/organizations/slim.png" style="width: 135px;"></a></td></tr></table>
+                        <a href="http://www.pfizer.com"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/pfizer.jpg" style="width: 130px;"></a></td><td>
+                        <a href="http://en.sanofi.com"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/sanofi.jpg" style="width: 140px;"></a></td><td>
+                        <a href="http://jdrf.org"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/jdrf.jpg" style="width: 125px;"></a></td><td>
+                        <a href="http://www.diabetes.org"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/ADA.jpg" style="width: 135px;"></a></td>
+                        <td><a href="http://www.fundacioncarlosslim.org/en/"><img src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/slim.png" style="width: 135px;"></a></td></tr></table>
 
                 <p style="margin: auto;"></p>
 
