--- a/contents/t2d_contact_page.html
+++ b/contents/t2d_contact_page.html
@@ -1,1 +1,86 @@
+<div class="container dk-static-content">
+        <div class="row">
 
+            
+                <div class="col-md-12">
+                    <h1 class="dk-page-title">Knowledgebase and Portal Team</h1>
+                </div>
+                    <div class="col-md-9">
+                        <h5 class="dk-under-header">The Type 2 Diabetes Knowledge Portal is being developed by a team of scientists and software engineers at the Broad Institute, the University of Michigan, University of Oxford, and many other collaborators as part of a worldwide scientific consortium with contributors from academia, industry, and non-profit organizations.</h5>
+
+                        <h5 class="dk-under-header">There are several ways to get in touch with the Portal team:
+                            <ul>
+                                <li><a href="mailto:help@type2diabetesgenetics.org">Contact the team</a> to get individual help</li>
+                                <li>Join the discussion in our <a href="http://www.type2diabetesgenetics.org/informational/forum">forum</a></li>
+                                <li><a href="https://docs.google.com/a/broadinstitute.org/forms/d/1bncgNMw89nmqukMPc7xIourH-Wu7Vpc4xJ6Uh4RSECI/viewform" target="_blank">Sign up for email updates</a></li>
+                                <li>Interested in contributing data to the Portal? <a href="https://s3.amazonaws.com/broad-portal-resources/sendingData.pdf" target="_blank">Read our guide to data submission.</a></li>
+                            </ul>
+                        </h5>
+                    </div>
+                <div class="col-md-3" id="t2dImageHolder" style="padding-top: 15px;">
+                    <div class="dk-t2d-blue dk-contact-button dk-right-column-buttons"><a href="mailto:help@type2diabetesgenetics.org" target="_blank">Contact the team for help</a></div>
+                    <div class="dk-t2d-blue dk-forum-button dk-right-column-buttons"><a href="http://www.type2diabetesgenetics.org/informational/forum" target="_blank">Join the discussion in our forum</a></div>
+                    <div class="dk-t2d-blue dk-email-button dk-right-column-buttons"><a href="https://docs.google.com/a/broadinstitute.org/forms/d/1bncgNMw89nmqukMPc7xIourH-Wu7Vpc4xJ6Uh4RSECI/viewform" target="_blank">Sign up for email updates</a></div>
+                    <div class="dk-t2d-green dk-reference-button dk-right-column-buttons"><a href="https://s3.amazonaws.com/broad-portal-resources/sendingData.pdf" target="_blank">Guide to data submission</a></div>
+                </div>
+                    <div class="col-md-9">
+                    <h3 class="dk-blue-bordered">Accelerating Medicines Partnership (AMP) Type 2 Diabetes Knowledge Portal (T2DKP) and Data Coordinating Center (DCC) Team</h3>
+
+                <table class="dk-team-list"><tr><td><strong>Principal investigator</strong></td><td>Jose Florez</td></tr><tr><td><strong>Co-investigator</strong></td><td><a href="https://flannick.org/" target="_blank">Jason Flannick</a></td></tr><tr><td><strong>Director of operations and development</strong></td><td>Noël Burtt</td></tr><tr><td><strong>Manager of content and community</strong></td><td>Maria Costanzo</td></tr><tr><td><strong>Software engineers</strong></td><td>Benjamin Alexander<br>Marc Duby<br>Clint Gilbert<br>Todd Green<br>Dong-Keun Jang<br>Jeffrey Massung<br>Oliver Ruebenacker<br>David Siedzik<br>Preeti Singh</td></tr><tr><td><strong>Computational biologists</strong></td><td>Marcin von Grotthuss</br>Ryan Koesterer</td></tr><tr><td><strong>Project manager</strong></td><td>Lizz Caulkins</td></tr><tr><td><strong>Analytical and clinical contributors</strong></td><td>Josep Mercader<br>Miriam Udler</td></tr><tr><td><strong>Team alumni</strong></td><td>Mary Carmichael<br>Tad Jordan<br>Michael Sanders<br>David Siedzik<br>Scott Sutherland<br>Kaan Yuksel</td></tr></table>
+
+
+                    <h4 class="dk-blue-bordered">Methods and Tool Development Teams</h4>
+                    <h4>AMP Type 2 Diabetes Knowledge (T2DK)</h4>
+
+                <table class="dk-team-list"><tr><td><strong>Principal Investigator</strong></td><td>Daniel MacArthur</td></tr><tr><td><strong>Principal Investigator</strong></td><td>Benjamin Neale</td></tr><tr><td></td><td>Jonathan Bloom<br>Konrad Karczewski<br>Cotton Seed<br>Matthew Solomonson</td></tr></table>
+
+                <h4>AMP Enhanced Diabetes Portal</h4>
+
+                <table class="dk-team-list"><tr><td><strong>Principal Investigator</strong></td><td>Michael Boehnke</td></tr><tr><td><strong>Principal Investigator</strong></td><td>Gonçalo Abecasis</td></tr><tr><td></td><td>Christopher Clark<br>Matthew Flickinger<br>Daniel Taliun<br>Ryan Welch</td></tr></table>
+
+                <h4>EBI Federated Node</h4>
+
+
+                <table class="dk-team-list"><tr><td><strong>Principal Investigator</strong></td><td>Paul Flicek</td></tr><tr><td><strong>Principal Investigator</strong></td><td>Mark McCarthy</td></tr><tr><td><strong>Principal Investigator</strong></td><td>Gil McVean</td></tr><tr><td></td><td>Thomas Keane<br>Dylan Spalding</td></tr></table>
+                        <h4>Diabetes Epigenome Atlas Federated Node</h4>
+                        <table class="dk-team-list"><tr><td><strong>Principal Investigator</strong></td><td>Kyle Gaulton</td></tr><tr><td></td><td>Parul Kudtarkar<br>Samuel Morabito<br>Ying Sun</td></tr></table>
+                </div>
+                     <div class="col-md-3 text-center" id="t2dImageHolder" style="padding-top: 10px;">
+                        <p style="margin-top: 10px;"><a href="https://broadinstitute.org" target="_blank">
+
+                            <img style="width:180px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/BroadInstLogoforDigitalRGB.png" />
+
+                        </a></p>
+                        <hr>
+
+                        <p><a href="https://sph.umich.edu" target="_blank">
+
+                            <img style="width:120px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/UM-SPH.png" />
+
+                        </a></p>
+                        <hr>
+
+                        <p><a href="http://www.ox.ac.uk/" target="_blank">
+
+                            <img style="width:120px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/University_of_Oxford.gif" />
+
+                        </a></p>
+                        <hr>
+
+                        <p><a href="https://www.ebi.ac.uk" target="_blank">
+
+                            <img style="width:180px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/EBI.png" />
+
+                        </a></p>
+                         <hr>
+
+                         <p><a href="https://www.t2depigenome.org/" target="_blank">
+
+                             <img style="width:220px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/T2DREAM_logo.png" />
+
+                         </a></p>
+
+                    </div>
+
+                </div>
+                </div>
