--- a/contents/mi_contact_page.html
+++ b/contents/mi_contact_page.html
@@ -1,1 +1,14 @@
+<div class="container dk-static-content">
+        <div class="row">
+                    <div class="col-md-10 col-md-offset-1">
+                        <h1 class="dk-page-title">Knowledgebase and Portal Team</h1>
+                    </div>
+                    <div class="col-md-8 col-md-offset-2">
+                    <h4 class="dk-blue-bordered">Cardiovascular Disease Knowledge Portal Team</h4>
+                <p>For questions or suggestions about the CVDKP web interface and tools, <a href="mailto:help@cvdgenetics.org">email the CVDKP team</a>.</p>
+                        <p>A complete list of Knowledge Portal project staff may be found at the <a href="http://www.type2diabetesgenetics.org/informational/contact" target="_blank">Type 2 Diabetes Knowledge Portal</a>.</p>
+                <h4 class="dk-blue-bordered">Data Contributors</h4>
+                        <p>Contact the consortia that generated the data in the CVDKP:<ul><li><a href="https://www.afgen.org/contact" target="_blank">AFGen</a></li><li><a href="http://lipidgenetics.org/" target="_blank">GLGC</a></li><li><a href="http://www.kathiresanlab.org/contact-us/" target="_blank">MIGen</a></li><li><a href="http://www.cardiogramplusc4d.org/steering-committee/" target="_blank">CARDIoGRAMplusC4D</a></li></ul></p>
 
+                </div></div>
+    </div>
