--- a/contents/ibd_contact_page.html
+++ b/contents/ibd_contact_page.html
@@ -1,1 +1,15 @@
+<div class="container dk-static-content">
+        <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    <h1 class="dk-page-title">Knowledgebase and Portal Team</h1>
+                </div>
 
+                <div class="col-md-8 col-md-offset-2">
+                    <p>This portal was built by a team at the <a href="http://www.broadinstitute.org/" target="_blank">Broad Institute of MIT and Harvard</a> in collaboration with <a href="http://www.massgeneral.org/" target="_blank">Massachusetts General Hospital</a>.</p>
+                    <p>Not sure who to contact? Try our group email address: <a href="mailto:cerebrovascular.disease.portal@gmail.com">cerebrovascular.disease.portal@gmail.com</a></p>
+                    
+                    <h4 class="dk-blue-bordered">Cerebrovascular Disease Knowledge Portal (CDKP) and Data Coordinating Center (DCC) Team</h4>
+                    <table class="dk-team-list"><tr><td><strong>Principal investigator</strong></td><td>Jonathan Rosand</td></tr><tr><td><strong>Senior group leader</strong></td><td>Christina Kourkoulis<br>Jason Flannick</td></tr><tr><td><strong>Associate director, operations</strong></td><td>Noël Burtt</td></tr><tr><td><strong>Manager of content and community</strong></td><td>Maria Costanzo</td></tr><tr><td><strong>Software engineers</strong></td><td>Benjamin Alexander<br>Marc Duby<br>Dong-Keun Jang<br>Preeti Singh</td></tr><tr><td><strong>Computational biologists</strong></td><td>Marcin von Grotthuss</br>Ryan Koesterer</td></tr><tr><td><strong>Project manager</strong></td><td>Katherine Crawford</td></tr><tr><td><strong>Analytical and clinical contributors</strong></td><td>Guido Falcone<br>Rainer Malik<br>Cristina Gallego<br>Neil Vaishnav</td></tr></table>
+                </div>
+        </div>
+    </div>
