--- a/contents/epilepsy_contact_page.html
+++ b/contents/epilepsy_contact_page.html
@@ -1,1 +1,11 @@
+<div class="container dk-static-content">
+        <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    <h1 class="dk-page-title">Knowledgebase and Portal Team</h1>
+                </div>
 
+                <div class="col-md-8 col-md-offset-2">
+<p>Contact information for the team will go here.</p>                    
+                </div>
+        </div>
+    </div>
