--- a/contents/t2d_collaborate_page.html
+++ b/contents/t2d_collaborate_page.html
@@ -1,1 +1,49 @@
+<div class="container dk-static-content">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="dk-page-title">Join the AMP T2D Knowledge Portal community!</h1>
 
+            </div>
+            <div class="col-md-9">
+
+                <h5 class="dk-under-header">We are interested in forming collaborations around new data, methods, and tools. We encourage researchers to contact us about new data relevant to the genetics of type 2 diabetes and related traits. We also welcome collaboration on development of general methods and tools for analysis and presentation of genetic association data for complex diseases and traits.</h5>
+                <h5 class="dk-under-header">Find complete information on data submission in our <a href="https://s3.amazonaws.com/broad-portal-resources/AMP_T2DKP_Submitter_Guide.pdf" target="_blank">AMP T2D Knowledge Portal Submitter and Analysis Guide for Data at the DCC</a>.</h5>
+                <h3>Some frequently asked questions:</h3>
+                <h4 class="dk-blue-bordered">Why should I contribute my data?</h4>
+                <ul><li>See your data in the context of hundreds of thousands of samples.</li><li>Have your data analyzed and checked by the expert Analysis Team at the AMP Data Coordinating Center (AMP-DCC).</li><li>Get access to cutting edge analysis tools that can be used for your research.</li><li>Share your data with the wider diabetes research community.</li></ul>
+
+                <h4 class="dk-blue-bordered">What kind of data do we need?</h4>
+                <ul><li>Right now, we are ready to receive array, exome sequencing, and whole-genome sequencing data.</li><li>We are interested in incorporating both summary statistics and individual-level data.</li><li>In the future, we will be ready to receive gene expression, metabolite, and epigenetic data, and perhaps other types.</li></ul>
+
+                <h4 class="dk-blue-bordered">What compliance/regulatory documents are needed to submit my data to the AMP T2D Knowledge Portal?</h4>
+                <ul><li>In order to include your data in the AMP T2D Knowledge Portal, you will need to obtain permission from your institution's your IRB review board (or your country's equivalent) to share the data with us and make summary level metrics available on the Portal.</li><li>We also ask that you sign a <a href="https://s3.amazonaws.com/broad-portal-resources/AMP-T2D_DTA_and_policies.pdf" target="_blank">Data Transfer Agreement</a>.</li></ul>
+
+                <h4 class="dk-blue-bordered">What will we do with your data?</h4>
+                <ul><li>We will perform quality control and association analysis.</li><li>You will have the opportunity to review the results before any data are made available on the Portal.</li></ul>
+
+                <h4 class="dk-blue-bordered">How will we protect your data?</h4>
+                <ul><li>Only summary level analysis will be displayed on the portal. We will never show individual level data.</li><li>
+                    <a href="/dig-diabetes-portal/informational/policies">Click here to learn more</a>
+        about our policies on data transfer, use, and protection.</li>
+                </ul>
+
+                <h4 class="dk-blue-bordered">What if your data can’t come to the United States?</h4>
+                <ul><li>A Federated Node at EMBL-EBI will allow data to be stored there and be accessed by the Portal.  In the future, we plan to release technology that will support additional federated nodes in other locations.</li></ul>
+
+
+                <h4 class="dk-blue-bordered">Is funding available for projects to generate new data for the Portal?</h4>
+                <ul><li>Yes! The Foundation for the NIH offers funding opportunities. <a href="http://fnih.org/what-we-do/current-research-programs/amp-t2d-project" target="_blank"> See the request for proposals</a>.</li></ul>
+            </div>
+
+            <div class="col-md-3" style="padding-top:10px;">
+                <div class="dk-notice">
+                    <p class="dk-notice-header">Data Submission</p>
+                    <p>contact our data intake team at: <br><a href="mailto:amp-dcc-data-submission@broadinstitute.org">amp-dcc-data-submission@broadinstitute.org</a></p>
+                </div>
+                <div class="dk-notice">
+                    <p class="dk-notice-header">General Questions</p>
+                    <p>contact us at: <br><a href="mailto:help@type2diabetesgenetics.org">help@type2diabetesgenetics.org</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
