--- a/contents/t2d_connect.html
+++ b/contents/t2d_connect.html
@@ -1,5 +1,5 @@
 <p style="margin-bottom:3px;">
-  <a href="https://docs.google.com/a/broadinstitute.org/forms/d/1bncgNMw89nmqukMPc7xIourH-Wu7Vpc4xJ6Uh4RSECI/viewform" target="_blank"><img style="width:30px; height:30px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/email_update.svg" /></a>
+  <a href="https://docs.google.com/a/broadinstitute.org/forms/d/1bncgNMw89nmqukMPc7xIourH-Wu7Vpc4xJ6Uh4RSECI/viewform" target="_blank"><img style="width:30px; height:30px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/email_update.svg?sanitize=true" /></a>
 </p>
-<p style="margin-bottom:3px;"><a href="https://twitter.com/T2DKP" target="_blank"><img style="width:30px; height:30px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/twitter_icn.svg" /></a></p>
-<p><a href="https://www.linkedin.com/groups/8505761" target="_blank"><img style="width:30px; height:30px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/linkedin_icn.svg" /></a></p>
+<p style="margin-bottom:3px;"><a href="https://twitter.com/T2DKP" target="_blank"><img style="width:30px; height:30px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/twitter_icn.svg?sanitize=true" /></a></p>
+<p><a href="https://www.linkedin.com/groups/8505761" target="_blank"><img style="width:30px; height:30px;" src="https://raw.githubusercontent.com/broadinstitute/dpg_static_content/master/images/linkedin_icn.svg?sanitize=true" /></a></p>
